--- a/index.html
+++ b/index.html
@@ -30,7 +30,28 @@
     
     <!-- HEADER -->
     <div class="header">
-
+        <div class="container">
+            <div class="header-wrapper">
+                <a href="#" class="logo">
+                    <img class="logo-brand" src="img/mamon-logo.svg" alt="logo mamon">
+                    <h1 class="logo-brand-text">mamon</h1>
+                </a>
+                <ul class="menu">
+                    <li class="menu-item">
+                        <a class="menu-item-link" href="#">Services</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-item-link" href="#">Clients</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-item-link" href="#">Our team</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-btn" href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     <!-- HEADER END -->
 
@@ -60,7 +81,7 @@
 
     <!-- FOOTER -->
     <div class="footer">
-        
+
     </div>
     <!-- FOOTER END -->
 
