Added Content Section Styling

--- a/index.html
+++ b/index.html
@@ -27,64 +27,64 @@
     />
   </head>
   <body>
-    
     <!-- HEADER -->
     <div class="header">
-        <div class="container">
-            <div class="header-wrapper">
-                <a href="#" class="logo">
-                    <img class="logo-brand" src="img/mamon-logo.svg" alt="logo mamon">
-                    <h1 class="logo-brand-text">mamon</h1>
-                </a>
-                <ul class="menu">
-                    <li class="menu-item">
-                        <a class="menu-item-link" href="#">Services</a>
-                    </li>
-                    <li class="menu-item">
-                        <a class="menu-item-link" href="#">Clients</a>
-                    </li>
-                    <li class="menu-item">
-                        <a class="menu-item-link" href="#">Our team</a>
-                    </li>
-                    <li class="menu-item">
-                        <a class="menu-btn" href="#">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container">
+        <div class="header-wrapper">
+          <a href="#" class="logo">
+            <img class="logo-brand" src="img/mamon-logo.svg" alt="logo mamon" />
+            <h1 class="logo-brand-text">mamon</h1>
+          </a>
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="menu-item-link" href="#">Services</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-item-link" href="#">Clients</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-item-link" href="#">Our team</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-btn" href="#">Contact Us</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </div>
     <!-- HEADER END -->
 
     <!-- CONTENT -->
     <div class="content">
-
+      <div class="container">
+        <div class="content-wrapper">
+          <h1 class="content-title">We're an independent development agency.</h1>
+          <p class="content-text">
+            We understand the intricacies of web development inside-out. That's
+            why we build rock-solid Mobile and Web applications enriched with
+            user-centered visual experiences.
+          </p>
+          <a class="content-btn" href="#">Contact Us</a>
+        </div>
+      </div>
     </div>
     <!-- CONTENT END -->
 
     <!-- SERVICES -->
-    <div class="services">
-
-    </div>
+    <div class="services"></div>
     <!-- SERVICES END -->
 
     <!-- CLIENTS -->
-    <div class="clients">
-
-    </div>
+    <div class="clients"></div>
     <!-- CLIENTS END -->
 
     <!-- TEAM -->
-    <div class="team">
-
-    </div>
+    <div class="team"></div>
     <!-- TEAM END -->
 
     <!-- FOOTER -->
-    <div class="footer">
-
-    </div>
+    <div class="footer"></div>
     <!-- FOOTER END -->
-
 
     <!-- font awesome js -->
     <script
