Added Services section styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
 
@@ -58,7 +58,9 @@
     <div class="content">
       <div class="container">
         <div class="content-wrapper">
-          <h1 class="content-title">We're an independent development agency.</h1>
+          <h1 class="content-title">
+            We're an independent development agency.
+          </h1>
           <p class="content-text">
             We understand the intricacies of web development inside-out. That's
             why we build rock-solid Mobile and Web applications enriched with
@@ -70,9 +72,80 @@
     </div>
     <!-- CONTENT END -->
 
+    <!-- LINE GROUP -->
+    <div class="line"></div>
+    <div class="container line-wrapper">
+      <div class="line-text">Our Services</div>
+    </div>
+
     <!-- SERVICES -->
-    <div class="services"></div>
+    <div class="services">
+      <div class="container">
+        <div class="services-wrapper">
+          <div class="services-item">
+            <div class="services-img-box">
+              <img class="services-item-logo" src="img/phone new.svg" alt="" />
+            </div>
+            <div class="services-item-info">
+              <h1 class="services-item-info-title">Mobile Development</h1>
+              <p class="services-item-info-text">
+                We develop mobile apps for all contemporary <br />
+                mobile platforms. Mamon team builds <br />
+                native and cross-platform solutions.
+              </p>
+            </div>
+          </div>
+
+          <div class="services-item">
+            <div class="services-img-box">
+              <img class="services-item-logo" src="img/monitor.svg" alt="" />
+            </div>
+            <div class="services-item-info">
+              <h1 class="services-item-info-title">Web Development</h1>
+              <p class="services-item-info-text">
+                Mamon offers full range of services from various <br />
+                CMS and frameworks based websites to complex <br />
+                ERP/CRM solutions and e-commerce stores.
+              </p>
+            </div>
+          </div>
+
+          <div class="services-item">
+            <div class="services-img-box">
+              <img class="services-item-logo" src="img/layers.svg" alt="" />
+            </div>
+            <div class="services-item-info">
+              <h1 class="services-item-info-title">Product Design</h1>
+              <p class="services-item-info-text">
+                We create design given the product audience, <br />
+                goal, business domain, technology and <br />
+                the platform for the solution.
+              </p>
+            </div>
+          </div>
+
+          <div class="services-item">
+            <div class="services-img-box">
+              <img class="services-item-logo" src="img/test.svg" alt="" />
+            </div>
+            <div class="services-item-info">
+              <h1 class="services-item-info-title">Quality Assurance</h1>
+              <p class="services-item-info-text">
+                Our QA team ensures high standard of <br />
+                quality of products delivered.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- SERVICES END -->
+
+    <!-- LINE GROUP -->
+    <div class="line"></div>
+    <div class="container line-wrapper">
+      <div class="line-text">Our Clients</div>
+    </div>
 
     <!-- CLIENTS -->
     <div class="clients"></div>
