Added clients section styling

--- a/index.html
+++ b/index.html
@@ -148,7 +148,24 @@
     </div>
 
     <!-- CLIENTS -->
-    <div class="clients"></div>
+    <div class="clients">
+        <div class="container">
+            <div class="clients-wrapper">
+                <div class="img-box"><img src="img/logo-lightspeed.svg" alt=""></div>
+                <div class="img-box"><img src="img/logo-trvl.svg" alt=""></div>
+                <div class="img-box"><img src="img/logo-spider-strategies.svg" alt=""></div>
+                <div class="img-box"><img src="img/logo-tripadvisor.svg" alt=""></div>
+                <div class="img-box"><img src="img/logo-shutterfly.svg" alt=""></div>
+                <div class="img-box"><img src="img/logo-decos.svg" alt=""></div>
+                <div class="img-box"><img src="img/logo-tiqets.svg" alt=""></div>
+                <div class="img-box"><img src="img/logo-hotelchamp.svg" alt=""></div>
+                <div class="img-box"><img src="img/logo-flitsmeister.svg" alt=""></div>
+                <div class="img-box"><img src="img/logo-sap.svg" alt=""></div>
+                <div class="img-box"><img src="img/logo-redkix.svg" alt=""></div>
+                <div class="img-box"><img src="img/logo-nos.svg" alt=""></div>
+            </div>
+        </div>
+    </div>
     <!-- CLIENTS END -->
 
     <!-- TEAM -->
