footer section styling

--- a/index.html
+++ b/index.html
@@ -168,12 +168,129 @@
     </div>
     <!-- CLIENTS END -->
 
+    <!-- LINE GROUP -->
+    <div class="line"></div>
+    <div class="container line-wrapper">
+      <div class="line-text">Our Team</div>
+    </div>
+
     <!-- TEAM -->
-    <div class="team"></div>
+    <div class="team">
+        <div class="container">
+            <div class="team-wrapper">
+                <div class="team-item">
+                    <div class="team-item-logo">
+                        <img src="img/1.png" alt="">
+                    </div>
+                    <div class="team-item-info">
+                        <h1 class="team-item-avtor">Vadim</h1>
+                        <p class="team-item-job">Managing Director</p>
+                    </div>
+                </div>
+
+                <div class="team-item">
+                    <div class="team-item-logo">
+                        <img src="img/2.png" alt="">
+                    </div>
+                    <div class="team-item-info">
+                        <h1 class="team-item-avtor">Sergey</h1>
+                        <p class="team-item-job">Technology Director</p>
+                    </div>
+                </div>
+
+                <div class="team-item">
+                    <div class="team-item-logo">
+                        <img src="img/3.png" alt="">
+                    </div>
+                    <div class="team-item-info">
+                        <h1 class="team-item-avtor">Andrey</h1>
+                        <p class="team-item-job">Front-end Developer</p>
+                    </div>
+                </div>
+
+                <div class="team-item">
+                    <div class="team-item-logo">
+                        <img src="img/4.png" alt="">
+                    </div>
+                    <div class="team-item-info">
+                        <h1 class="team-item-avtor">Alex</h1>
+                        <p class="team-item-job">Front-end Developer</p>
+                    </div>
+                </div>
+
+
+                <div class="team-item">
+                    <div class="team-item-logo">
+                        <img src="img/5.png" alt="">
+                    </div>
+                    <div class="team-item-info">
+                        <h1 class="team-item-avtor">Agneshka</h1>
+                        <p class="team-item-job">Mobile Developer</p>
+                    </div>
+                </div>
+
+                <div class="team-item">
+                    <div class="team-item-logo">
+                        <img src="img/6.png" alt="">
+                    </div>
+                    <div class="team-item-info">
+                        <h1 class="team-item-avtor">Dimitry</h1>
+                        <p class="team-item-job">Back-end Developer</p>
+                    </div>
+                </div>
+
+                <div class="team-item">
+                    <div class="team-item-logo">
+                        <img src="img/7.png" alt="">
+                    </div>
+                    <div class="team-item-info">
+                        <h1 class="team-item-avtor">Artyom</h1>
+                        <p class="team-item-job">Back-end Developer</p>
+                    </div>
+                </div>
+
+                <div class="team-item">
+                    <div class="team-item-logo">
+                        <img src="img/8.png" alt="">
+                    </div>
+                    <div class="team-item-info">
+                        <h1 class="team-item-avtor">Evgeny</h1>
+                        <p class="team-item-job">Product Designer</p>
+                    </div>
+                </div>
+
+                <div class="team-item">
+                    <div class="team-item-logo">
+                        <img src="img/9.png" alt="">
+                    </div>
+                    <div class="team-item-info">
+                        <h1 class="team-item-avtor">Tom</h1>
+                        <p class="team-item-job">Product Designer</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
     <!-- TEAM END -->
 
     <!-- FOOTER -->
-    <div class="footer"></div>
+    <div class="footer">
+        <div class="container">
+            <div class="footer-wrapper">
+                <div class="footer-logo">
+                    <img src="img/mamon-logo.svg" alt="">
+                    <p>MAMON LLC © 2018</p>
+                </div>
+                <div class="footer-social-media">
+                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fab fa-behance"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-codepen"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- FOOTER END -->
 
     <!-- font awesome js -->
